Tree/assets/css/tree.css
#wpbody {
	z-index: 1000;
}

#wpcontent, #wpfooter {
	margin-left: 420px;
}

#wpcontent {
	margin-bottom: 20px;
}

#adminmenumain {
	position: relative;
	z-index: 2000;
}

#f4-tree-container {
	box-sizing: border-box;
	position: fixed;
	z-index: 1100;
	left: 160px;
	top: 32px;
	bottom: 0;
	padding: 10px 5px;
	border-right: 1px solid #DDDDDD;
	width: 260px;
	background-color: rgb(250,250,250);
	overflow-y: auto;
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
	resize: horizontal;
}

#tree {
	position: relative;
}

.focus-on #f4-tree-container,
.mce-fullscreen #adminmenumain,
.mce-fullscreen #f4-tree-container {
	display: none;
}

/* Gutenberg */
.interface-interface-skeleton__left-sidebar,
.interface-interface-skeleton__header,
.interface-interface-skeleton__footer,
.interface-interface-skeleton__content {
	margin-left: 260px;
}

.block-editor-page.wp-editor #f4-tree-container {
	display: block;
}

.is-fullscreen-mode #f4-tree-container {
	top: 0;
	left: 0;
}

@media screen and (max-width: 960px) {
	#f4-tree-container{
		display: none;
	}
}

